<resources>
    <string name="app_name">Calculator</string>
    <string name="but_AC">C</string>
    <string name="but_backspace">←</string>
    <string name="but_sin">sin</string>
    <string name="but_cos">cos</string>
    <string name="but_tan">tan</string>
    <string name="but_division">÷</string>
    <string name="but_7">7</string>
    <string name="but_8">8</string>
    <string name="but_9">9</string>
    <string name="but_4">4</string>
    <string name="but_5">5</string>
    <string name="but_6">6</string>
    <string name="but_1">1</string>
    <string name="but_2">2</string>
    <string name="but_3">3</string>
    <string name="but_0">0</string>
    <string name="but_point">.</string>
    <string name="but_multiply">×</string>
    <string name="but_minus">-</string>
    <string name="but_plus">+</string>
    <string name="but_equal">=</string>
    <string name="but_open_parenthesis">(</string>
    <string name="but_closed_parenthesis">)</string>
    <string name="but_sqrt">√</string>
    <string name="but_percent">%</string>

</resources>