<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:layout_marginEnd="4dp"
                                                   android:layout_marginLeft="4dp"
                                                   android:layout_marginRight="4dp"
                                                   android:layout_marginStart="4dp"
                                                   android:background="#FFFFFF"
                                                   tools:context=".MainActivity">

    <TextView
            android:id="@+id/archivedExpressionsTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:gravity="bottom|right"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:scrollbars="vertical"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/expressionTextView"
            app:layout_constraintEnd_toEndOf="@+id/expressionTextView"
            app:layout_constraintStart_toStartOf="@+id/expressionTextView"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/expressionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="bottom|right"
            android:padding="8dp"
            android:textColor="#000000"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2" android:layout_marginBottom="16dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" android:id="@+id/linearLayout4">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="64dp" android:id="@+id/Void"
                android:textColor="#FF5722"
                android:textSize="24sp"
                android:visibility="invisible" android:layout_weight="1"
        />
        <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_0"
                android:textColor="#040000"
                android:textSize="24sp"
                android:background="@android:color/transparent"
        />
        <Button
                android:id="@+id/btnPoint"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_point"
                android:textColor="#090000"
                android:textSize="24sp"
                android:background="@android:color/transparent"
        />
        <Button
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_equal"
                android:textSize="24sp"
                android:backgroundTint="#03A9F4"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
            app:layout_constraintStart_toStartOf="@+id/linearLayout4"
            android:id="@+id/linearLayout5" android:layout_marginBottom="2dp">
        <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_1"
                android:textColor="#040000"
                android:textSize="24sp"
                android:background="@android:color/transparent"
        />
        <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_2"
                android:textColor="#040000"
                android:textSize="24sp"
                android:background="@android:color/transparent"
        />
        <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_3"
                android:textColor="#040000"
                android:textSize="24sp"
                android:background="@android:color/transparent"
        />
        <Button
                android:id="@+id/btnDivision"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_division"
                android:textColor="#03A9F4"
                android:textSize="24sp"
                android:background="@android:color/transparent"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/linearLayout3"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout5"
            app:layout_constraintStart_toStartOf="@+id/linearLayout5" android:layout_marginBottom="2dp">
        <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_4"
                android:textColor="#040000"
                android:textSize="24sp"
                android:background="@android:color/transparent"
        />
        <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_5"
                android:textColor="#040000"
                android:textSize="24sp"
                android:background="@android:color/transparent"
        />
        <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_6"
                android:textColor="#040000"
                android:textSize="24sp"
                android:background="@android:color/transparent"
        />
        <Button
                android:id="@+id/btnMultiply"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_multiply"
                android:textColor="#03A9F4"
                android:textSize="24sp"
                android:background="@android:color/transparent"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/linearLayout"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="@+id/linearLayout3" android:layout_marginBottom="2dp">
        <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_7"
                android:textColor="#040000"
                android:textSize="24sp"
                android:background="@android:color/transparent"
        />
        <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_8"
                android:textColor="#040000"
                android:textSize="24sp"
                android:background="@android:color/transparent"
        />
        <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_9"
                android:textColor="#040000"
                android:textSize="24sp"
                android:background="@android:color/transparent"
        />
        <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_minus"
                android:textColor="#03A9F4"
                android:textSize="24sp"
                android:background="@android:color/transparent"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:id="@+id/linearLayout2"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout" android:layout_marginBottom="2dp">
        <Button
                android:id="@+id/btnAC"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_AC"
                android:textColor="#03A9F4"
                android:textSize="18sp"
                android:background="@android:color/transparent"
        />
        <Button
                android:text="@string/but_backspace"
                android:layout_width="wrap_content"
                android:layout_height="64dp" android:id="@+id/btnBackspace"
                android:textColor="#03A9F4"
                android:textSize="30sp"
                android:background="@android:color/transparent"
                android:paddingTop="0dp"
                android:layout_weight="1"/>
        <Button
                android:id="@+id/btnPercent"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_percent"
                android:textColor="#03A9F4"
                android:textSize="20sp"
                android:background="@android:color/transparent"
        />
        <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:text="@string/but_plus"
                android:textColor="#03A9F4"
                android:textSize="24sp"
                android:background="@android:color/transparent"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>